# to-do

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_08_07_1502-1b849b762d8d_init_migrations.py  2024_08_09_1224-6c512b9b8f5b_permission.py  2024_08_09_1527-9b796129af51_ondelete.py  2024_08_09_1618-527454875da7_rename_to_login.py
src/: config.py  database.py  exceptions.py  main.py  repositories.py
src/tasks/: dependencies.py  models.py  routers.py  schemas.py  services.py
src/users/: auth.py  dependencies.py  exceptions.py  models.py  routers.py  schemas.py  services.py
tests/: conftest.py  test__users.py  test_tasks.py  test_users.py
